<resources>
    <string name="app_name">SpotifyDJ</string>
    <string name="track_tempo">BPM: %1$.1f</string>
    <string name="new_playlist_title">NewPlaylist_%1$s</string>
    <string name="toast_login_failer">ログインに失敗しました</string>

    <!--  search   -->
    <string name="search_description">キーワードで曲を検索</string>
    <string name="not_applicable_result">該当結果なし</string>
    <string name="search_hint">曲名、アーティスト、キーワード</string>
    <string name="current_track_empty">曲をタップして追加</string>
    <string name="upper_track_title">Upper Tracks</string>
    <string name="upper_track_empty">関連する盛り上がる曲を探します</string>
    <string name="downer_track_title">Downer Tracks</string>
    <string name="downer_track_empty">関連する落ち着いた曲を探します</string>
    
    <string name="result_failed">曲の取得に失敗しました。¥n時間をおいて再度試してください</string>
    <string name="result_update_title_success">タイトルを更新しました</string>
    <string name="title_create_playlist">プレイリストを作成</string>
    <string name="title_playlist">プレイリスト名</string>
    <string name="btn_save">保存する</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="playlist_title_error_message">タイトルを入力してください</string>
    <string name="result_crete_playlist_success">プレイリストを作成しました</string>
    <string name="playlist_please_select">編集するプレイリストを選択してください</string>
</resources>
