<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_24"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--  Current Track  -->
            <TextView
                android:id="@+id/current_frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_90"
                android:background="@drawable/current_recommend_background"
                app:layout_constraintTop_toTopOf="@id/current_track_list" />

            <TextView
                android:id="@+id/current_track_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_track_empty"
                app:layout_constraintBottom_toBottomOf="@+id/current_track_list"
                app:layout_constraintTop_toTopOf="@+id/current_track_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/current_track_list"
                android:layout_width="match_parent"
                android:paddingHorizontal="@dimen/padding_8"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_height="@dimen/image_size_90"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    Upper Track        -->
            <TextView
                android:id="@+id/upper_track_flame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_220"
                android:layout_marginTop="@dimen/margin_12"
                android:background="@drawable/upper_recommend_background"
                app:layout_constraintTop_toTopOf="@+id/upper_track_title" />

            <TextView
                android:id="@+id/upper_track_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/padding_8"
                android:text="@string/upper_track_title"
                android:textColor="@color/upper_tracks"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_track_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upper_track_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_200"
                android:paddingHorizontal="@dimen/padding_8"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/upper_track_title" />

            <TextView
                android:id="@+id/not_applicable_upper_track_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable_result"
                app:layout_constraintBottom_toBottomOf="@+id/upper_track_list"
                app:layout_constraintTop_toTopOf="@+id/upper_track_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/upper_track_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_track_empty"
                app:layout_constraintBottom_toBottomOf="@+id/upper_track_list"
                app:layout_constraintTop_toTopOf="@+id/upper_track_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/upper_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@android:color/holo_green_light"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/upper_track_list"
                app:layout_constraintTop_toTopOf="@+id/upper_track_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <!--    Downer     -->
            <TextView
                android:id="@+id/downer_flame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_220"
                android:layout_marginTop="@dimen/margin_12"
                android:background="@drawable/downer_recommend_background"
                app:layout_constraintTop_toTopOf="@+id/downer_track_title" />

            <TextView
                android:id="@+id/downer_track_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:paddingHorizontal="@dimen/padding_8"
                android:background="@color/white"
                android:text="@string/downer_track_title"
                android:textColor="@color/downer_tracks"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upper_track_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/downer_track_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_200"
                android:paddingHorizontal="@dimen/padding_8"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/downer_track_title" />

            <TextView
                android:id="@+id/not_applicable_downer_track_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable_result"
                app:layout_constraintBottom_toBottomOf="@+id/downer_flame"
                app:layout_constraintEnd_toEndOf="@+id/downer_flame"
                app:layout_constraintStart_toStartOf="@id/downer_flame"
                app:layout_constraintTop_toTopOf="@+id/downer_flame"
                android:visibility="gone" />

            <TextView
                android:id="@+id/downer_track_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downer_track_empty"
                app:layout_constraintBottom_toBottomOf="@+id/downer_flame"
                app:layout_constraintEnd_toEndOf="@+id/downer_flame"
                app:layout_constraintStart_toStartOf="@id/downer_flame"
                app:layout_constraintTop_toTopOf="@+id/downer_flame" />

            <ProgressBar
                android:id="@+id/downer_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@android:color/holo_green_light"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/downer_flame"
                app:layout_constraintEnd_toEndOf="@id/downer_flame"
                app:layout_constraintStart_toStartOf="@id/downer_flame"
                app:layout_constraintTop_toTopOf="@id/downer_flame" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
